--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ fbq('track', 'PageView');
                     <span id="current-date"></span>
                 </div>
                 <!-- Headline -->
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">
-                TENHA ACESSO IMEDIATO A MAIS DE <span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQs</span> RARAS, CLÁSSICAS E MODERNAS </h1>
+                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">TENHA ACESSO IMEDIATO A MAIS DE <span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás</span> RARoS, CLÁSSICoS E MODERNoS</h1>
                 <!-- Subheadline -->
                 <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">
                 Tudo organizado por <span class="text-white font-bold border-b border-green-600">sagas</span>, <span class="text-white font-bold border-b border-green-600">personagens</span> e <span class="text-white font-bold border-b border-green-600">editoras</span> com acesso vitalício, leitura offline e liberação imediata por um valor simbólico. </p>
@@ -158,7 +157,7 @@ fbq('track', 'PageView');
                         <div class="space-y-4">
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
-                                <span class="text-lg font-semibold">+70 MIL HQs digitais</span>
+                                <span class="text-lg font-semibold">+70 MIL HQs e Mangás digitais</span>
                             </div>
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
@@ -185,17 +184,17 @@ fbq('track', 'PageView');
             <div class="carousel-container px-4">
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/FOLDE1.png" class="w-full h-full object-cover">
+                        <img src="images/folder%203.png" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/CLASICO%20HEROI.png" class="w-full h-full object-cover">
+                        <img src="images/Naruto.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/desktop-wallpaper-comic-book-cover-comicbook.jpg" class="w-full h-full object-cover">
+                        <img src="images/81YK1GpTkIL._AC_UF1000,1000_QL80_.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -214,7 +213,7 @@ fbq('track', 'PageView');
                         <h3 class="text-2xl font-comic text-white text-center mb-6 tracking-wider">PACOTE BÁSICO</h3>
                         <ul class="space-y-4 mb-8 flex-1 text-gray-300">
                             <li class="flex items-center gap-3">
-                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +10 MIL HQs digitais
+                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +10 MIL HQs e Mangás digitais
                             </li>
                             <li class="flex items-center gap-3">
                                 <i data-lucide="check" class="w-4 h-4 text-green-500"></i> Acesso imediato
@@ -234,7 +233,7 @@ fbq('track', 'PageView');
                         <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">PACOTE PREMIUM</h3>
                         <ul class="space-y-4 mb-8 flex-1 text-white">
                             <li class="flex items-center gap-3">
-                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +70 MIL HQs digitais
+                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +70 MIL HQs e Mangás digitais
                             </li>
                             <li class="flex items-center gap-3">
                                 <i data-lucide="check" class="w-4 h-4 text-green-500"></i> Saga Invencível completa
@@ -267,7 +266,7 @@ fbq('track', 'PageView');
                 <div class="space-y-4">
                     <details class="group border border-slate-200 rounded-lg bg-slate-50 open:bg-white open:ring-2 open:ring-blue-100 transition-all">
                         <summary class="flex cursor-pointer items-center justify-between p-4 text-lg font-bold text-slate-900 hover:text-blue-600">
-                            COMO ACESSAR MINHAS HQs?
+                            COMO ACESSAR MINHAS HQs e Mangás?
                             <i data-lucide="chevron-down" class="w-5 h-5 transition-transform group-open:rotate-180"></i>
                         </summary>
                         <div class="px-4 pb-4 text-slate-600">
