--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ fbq('track', 'PageView');
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/Naruto.jpg" class="w-full h-full object-cover">
+                        <img src="images/naturo1.png" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
