--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ fbq('track', 'PageView');
                     </div>
                     <div class="w-full md:w-1/2 relative">
                         <div class="absolute inset-0 bg-blue-500/20 blur-[100px] rounded-full"></div>
-                        <img src="images/white_cloaked_superhero_action_pose.png" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
+                        <img src="images/br-11134207-7qukw-lhf1z6zn8f9q59.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                     </div>
                 </div>
             </div>
