--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ fbq('track', 'PageView');
                             <p className="text-gray-400 text-sm line-through mb-1">DE R$ 57,00</p>
                             <p class="text-gray-300 text-sm mb-2">POR APENAS</p>
                             <div class="text-6xl font-comic text-green-500 mb-6 tracking-tighter comic-text-stroke">R$ 10,00</div>
-                            <a href="https://e-books-pp.pay.yampi.com.br/r/K0H1IM30W2" target="_blank" class="block w-full py-4 rounded-xl font-bold text-xl bg-green-600 hover:bg-green-500 text-white shadow-lg transition-all uppercase tracking-wide font-comic text-center">
+                            <a target="_blank" class="block w-full py-4 rounded-xl font-bold text-xl bg-green-600 hover:bg-green-500 text-white shadow-lg transition-all uppercase tracking-wide font-comic text-center" href="index2.html">
                             COMPRAR AGORA MESMO! </a>
                         </div>
                     </div>
