--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@ fbq('track', 'PageView');
                 <!-- Video Placeholder -->
                 <div class="relative mx-auto max-w-4xl aspect-video rounded-xl overflow-hidden border-4 border-white/10 shadow-2xl mb-10 group cursor-pointer bg-black">
                     <div class="absolute inset-0 flex items-center justify-center bg-black/40 group-hover:bg-black/20 transition-all">
-                        <div class="w-20 h-20 bg-red-600 rounded-full flex items-center justify-center shadow-[0_0_30px_rgba(220,38,38,0.6)] group-hover:scale-110 transition-transform">
-                            <div class="w-0 h-0 border-t-[15px] border-t-transparent border-l-[25px] border-l-white border-b-[15px] border-b-transparent ml-2"></div>
-                        </div>
-                    </div>
-                    <img src="images/31072021212040_unnamed_(2.jpg" alt="Preview" class="w-full h-full object-cover opacity-60">
+</div>
+                    <img src="images/31072021212040_unnamed_(2.jpg" class="w-full h-full object-cover">
                 </div>
                 <!-- CTA -->
                 <button onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})" class="w-full md:w-auto px-8 py-6 text-2xl md:text-4xl font-comic text-white rounded-xl cta-gradient uppercase tracking-wider shadow-xl mb-4 animate-pulse">
