--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@ fbq('track', 'PageView');
                 <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">
                 Tudo organizado por <span class="text-white font-bold border-b border-green-600">sagas</span>, <span class="text-white font-bold border-b border-green-600">personagens</span> e <span class="text-white font-bold border-b border-green-600">editoras</span> com acesso vitalício, leitura offline e liberação imediata por um valor simbólico. </p>
                 <!-- Video Placeholder -->
-                <div class="relative mx-auto max-w-4xl aspect-video rounded-xl overflow-hidden border-4 border-white/10 shadow-2xl mb-10 group cursor-pointer bg-black">
-                    <div class="absolute inset-0 flex items-center justify-center bg-black/40 group-hover:bg-black/20 transition-all">
-</div>
-                    <img src="images/31072021212040_unnamed_(2.jpg" class="w-full h-full object-cover">
-                </div>
+                <img src="images/mm-mangas-one-piece.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                 <!-- CTA -->
                 <button onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})" class="w-full md:w-auto px-8 py-6 text-2xl md:text-4xl font-comic text-white rounded-xl cta-gradient uppercase tracking-wider shadow-xl mb-4 animate-pulse">
                     QUERO ACESSAR AGORA!
@@ -181,12 +177,12 @@ fbq('track', 'PageView');
             <div class="carousel-container px-4">
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/folder%203.png" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-death-note-cke.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/naturo1.png" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-naruto-cke.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -196,7 +192,7 @@ fbq('track', 'PageView');
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img class="w-full h-full object-cover" src="images/FOLDE4.jpg">
+                        <img class="w-full h-full object-cover" src="images/mm-mangas-dragon-ball.jpg">
                     </div>
                 </div>
             </div>
