--- a/index2.html
+++ b/index2.html
@@ -115,12 +115,12 @@ fbq('track', 'PageView');
             <div class="carousel-container px-4">
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/folder%203.png" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-one-piece.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/naturo1.png" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-naruto-cke.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -130,7 +130,7 @@ fbq('track', 'PageView');
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img class="w-full h-full object-cover" src="images/FOLDE4.jpg">
+                        <img class="w-full h-full object-cover" src="images/mm-mangas-death-note-cke.jpg">
                     </div>
                 </div>
             </div>
