--- a/index2.html
+++ b/index2.html
@@ -63,6 +63,8 @@ fbq('track', 'PageView');
             <div class="absolute inset-0 bg-gradient-to-b from-[#0f172a] via-[#0f172a]/95 to-[#0f172a] z-10"></div>
             <div class="absolute inset-0 opacity-20 z-0">
                 <img src="images/hero_collage_of_comic_book_panels.png" alt="Background" class="w-full h-full object-cover">
+                <a target="_blank" class="block w-full py-5 rounded-xl font-bold text-2xl cta-gradient text-white shadow-xl transition-all uppercase tracking-wide font-comic animate-pulse text-center" href="https://e-books-pp.pay.yampi.com.br/r/1JIIBCCKYM">
+                            QUERO ACESSO TOTAL! </a>
             </div>
             <div class="container relative z-20 mx-auto px-4 text-center">
                 <!-- Date Badge -->
@@ -80,61 +82,7 @@ fbq('track', 'PageView');
         </section>
         <!-- COMPARISON SECTION -->
         <!-- BENEFITS SECTION -->
-        <section class="py-16 bg-[#0f172a] overflow-hidden">
-            <div class="container mx-auto px-4">
-                <div class="flex flex-col md:flex-row items-center gap-12">
-                    <div class="w-full md:w-1/2 space-y-8">
-                        <h2 class="text-3xl md:text-5xl font-comic text-white">POR + 4,90 VEJA O QUE VOCÊ <span class="text-blue-500">VAI RECEBER:</span></h2>
-                        <div class="space-y-4">
-                            <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
-                                <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
-                                <span class="text-lg font-semibold">+70 MIL HQs e Mangás digitais</span>
-                            </div>
-                            <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
-                                <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
-                                <span class="text-lg font-semibold">HQs organizadas por tema</span>
-                            </div>
-                            <div class="flex items-center gap-3 p-3 bg-yellow-500/10 rounded-lg border border-yellow-500/20">
-                                <i data-lucide="gift" class="w-6 h-6 text-yellow-500"></i> 
-                                <span class="text-lg font-bold text-yellow-400">+ Atualizações Semanais</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-full md:w-1/2 relative">
-                        <div class="absolute inset-0 bg-blue-500/20 blur-[100px] rounded-full"></div>
-                        <img src="images/br-11134207-7qukw-lhf1z6zn8f9q59.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- CAROUSEL SECTION -->
-        <section class="py-12 bg-black/50 border-y border-white/5">
-            <div class="container mx-auto px-4 mb-8">
-                <h3 class="text-center text-2xl font-comic text-gray-400 uppercase tracking-widest">Algumas das Obras Disponíveis</h3>
-            </div>
-            <div class="carousel-container px-4">
-                <div class="carousel-item">
-                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/mm-mangas-one-piece.jpg" class="w-full h-full object-cover">
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/mm-mangas-naruto-cke.jpg" class="w-full h-full object-cover">
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/81YK1GpTkIL._AC_UF1000,1000_QL80_.jpg" class="w-full h-full object-cover">
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img class="w-full h-full object-cover" src="images/mm-mangas-death-note-cke.jpg">
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- PRICING SECTION -->
         <section id="pricing" class="py-20 bg-[#0f172a] relative">
             <div class="container mx-auto px-4 relative z-10">
@@ -143,7 +91,25 @@ fbq('track', 'PageView');
                     <!-- Premium Package -->
                     <div class="bg-gradient-to-b from-blue-900 to-[#0f172a] border-2 border-blue-500 rounded-2xl p-6 md:p-8 shadow-[0_0_40px_rgba(59,130,246,0.3)] flex flex-col relative md:scale-105 z-20 hover:-translate-y-2 transition-transform duration-300">
                         <div class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-blue-500 text-white px-4 py-1 rounded-full font-bold text-sm shadow-lg uppercase tracking-wider">DESCONTÃO HQ&apos;S</div>
-                        <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">PACOTE PREMIUM VIP</h3>
+                        <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">QUERO FICA COM PLANO BÁSICO</h3>
+                        <ul class="space-y-4 mb-8 flex-1 text-white">
+                            <li class="flex items-center gap-3"> +10 MIL HQs e Mangás digitais
+</li>
+                            <li class="flex items-center gap-3">
+                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> Acesso imediato
+                            </li>
+                        </ul>
+                        <div class="text-center mt-auto">
+                            <p classname="text-gray-400 text-sm line-through mb-1">DE R$ 57,00</p>
+                            <p class="text-gray-300 text-sm mb-2">POR APENAS</p>
+                            <div class="text-7xl font-comic text-green-400 mb-6 tracking-tighter comic-text-stroke drop-shadow-[0_0_10px_rgba(74,222,128,0.5)]">R$ 10,00</div>
+                            <a target="_blank" class="block w-full py-5 rounded-xl font-bold text-2xl cta-gradient text-white shadow-xl transition-all uppercase tracking-wide font-comic animate-pulse text-center" href="https://e-books-pp.pay.yampi.com.br/r/K0H1IM30W2">
+                            QUERO ACESSO TOTAL! </a>
+                        </div>
+                    </div>
+                    <div class="bg-gradient-to-b from-blue-900 to-[#0f172a] border-2 border-blue-500 rounded-2xl p-6 md:p-8 shadow-[0_0_40px_rgba(59,130,246,0.3)] flex flex-col relative md:scale-105 z-20 hover:-translate-y-2 transition-transform duration-300">
+                        <div class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-blue-500 text-white px-4 py-1 rounded-full font-bold text-sm shadow-lg uppercase tracking-wider">DESCONTÃO HQ&apos;S</div>
+                        <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">QUERO PACOTE PREMIUM VIP&nbsp;</h3>
                         <ul class="space-y-4 mb-8 flex-1 text-white">
                             <li class="flex items-center gap-3">
                                 <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +70 MIL HQs e Mangás digitais
@@ -160,6 +126,9 @@ fbq('track', 'PageView');
                             <li class="flex items-center gap-3">
                                 <i data-lucide="check" class="w-4 h-4 text-green-500"></i> Acesso vitalício + Bônus
                             </li>
+                            <li class="flex items-center gap-3">
+                                <i data-lucide="check" class="w-4 h-4 text-green-500"></i> Atualizações Semanais via Driver
+                            </li>
                         </ul>
                         <div class="text-center mt-auto">
                             <p className="text-gray-400 text-sm line-through mb-1">DE R$ 27,00</p>
@@ -172,6 +141,8 @@ fbq('track', 'PageView');
                 </div>
             </div>
         </section>
+        <a target="_blank" class="block w-full py-5 rounded-xl font-bold text-2xl cta-gradient text-white shadow-xl transition-all uppercase tracking-wide font-comic animate-pulse text-center" href="https://e-books-pp.pay.yampi.com.br/r/1JIIBCCKYM">
+                            QUERO ACESSO TOTAL! </a>
         <!-- FAQ SECTION -->
         <!-- FOOTER -->
         <!-- STICKY MOBILE CTA -->
