--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@ fbq('track', 'PageView');
                     <span id="current-date"></span>
                 </div>
                 <!-- Headline -->
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">TENHA ACESSO IMEDIATO A MAIS DE <span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás</span> RARoS, CLÁSSICoS E MODERNoS</h1>
+                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;RECEBA MAIS&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">de +70 MIL HQ&apos;s e mangás todos</span>&nbsp;em pORTUGUÊS E ALTA QUALIDADE!</h1>
                 <!-- Subheadline -->
-                <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">
-                Tudo organizado por <span class="text-white font-bold border-b border-green-600">sagas</span>, <span class="text-white font-bold border-b border-green-600">personagens</span> e <span class="text-white font-bold border-b border-green-600">editoras</span> com acesso vitalício, leitura offline e liberação imediata por um valor simbólico. </p>
+                <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">Acesso imediato ao maior catálogo de HQs e Mangás em Português! Qualidade garantida e conteúdo 100% em PT-BR. Não perca essa oportunidade!</p>
                 <!-- Video Placeholder -->
-                <img src="images/mm-mangas-one-piece.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
+                <img src="images/mm-mangas-naruto-cke.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                 <!-- CTA -->
                 <button onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})" class="w-full md:w-auto px-8 py-6 text-2xl md:text-4xl font-comic text-white rounded-xl cta-gradient uppercase tracking-wider shadow-xl mb-4 animate-pulse">
                     QUERO ACESSAR AGORA!
 </button>
-                <p class="text-sm text-gray-400 flex items-center justify-center gap-2 mt-4"> <span class="flex text-yellow-400"> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> </span>
-                +2.000 Alunos Satisfeitos </p>
+                <p class="text-sm text-gray-400 flex items-center justify-center gap-2 mt-4"><span class="flex text-yellow-400"> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> <i data-lucide="star" class="w-4 h-4 fill-yellow-400"></i> </span>
+                +5.000 Leitores Satisfeitos</p>
             </div>
         </section>
         <!-- COMPARISON SECTION -->
@@ -145,8 +144,7 @@ fbq('track', 'PageView');
             <div class="container mx-auto px-4">
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="w-full md:w-1/2 space-y-8">
-                        <h2 class="text-3xl md:text-5xl font-comic text-white">
-                        VEJA O QUE VOCÊ <span class="text-blue-500">VAI RECEBER:</span> </h2>
+                        <h2 class="text-3xl md:text-5xl font-comic text-white">VEJA O QUE VOCÊ <span class="text-blue-500">VAI RECEBER&nbsp; em nosso acervo digital completo!<br><br></span><h1>SÃO DE +70MIL HQ&apos;s e mangás!</h1></h2>
                         <div class="space-y-4">
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
@@ -164,7 +162,7 @@ fbq('track', 'PageView');
                     </div>
                     <div class="w-full md:w-1/2 relative">
                         <div class="absolute inset-0 bg-blue-500/20 blur-[100px] rounded-full"></div>
-                        <img src="images/br-11134207-7qukw-lhf1z6zn8f9q59.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
+                        <img src="images/DEMONSTRACAO-2.png" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                     </div>
                 </div>
             </div>
@@ -177,12 +175,12 @@ fbq('track', 'PageView');
             <div class="carousel-container px-4">
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/mm-mangas-death-note-cke.jpg" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-one-piece.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/mm-mangas-naruto-cke.jpg" class="w-full h-full object-cover">
+                        <img src="images/mm-mangas-death-note-cke.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -193,6 +191,33 @@ fbq('track', 'PageView');
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
                         <img class="w-full h-full object-cover" src="images/mm-mangas-dragon-ball.jpg">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-12 bg-black/50 border-y border-white/5">
+            <div class="container mx-auto px-4 mb-8">
+                <h3 class="text-center text-2xl font-comic text-gray-400 uppercase tracking-widest">Algumas das Obras Disponíveis</h3>
+            </div>
+            <div class="carousel-container px-4">
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/FOLDE1.png" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/CAPITAO.png" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/HOMEM%20ARANHA.jpg" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img class="w-full h-full object-cover" src="images/STHQ.jpg">
                     </div>
                 </div>
             </div>
@@ -223,7 +248,7 @@ fbq('track', 'PageView');
                     <!-- Premium Package -->
                     <div class="bg-gradient-to-b from-blue-900 to-[#0f172a] border-2 border-blue-500 rounded-2xl p-6 md:p-8 shadow-[0_0_40px_rgba(59,130,246,0.3)] flex flex-col relative md:scale-105 z-20 hover:-translate-y-2 transition-transform duration-300">
                         <div class="absolute top-0 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-blue-500 text-white px-4 py-1 rounded-full font-bold text-sm shadow-lg uppercase tracking-wider">Mais Vendido</div>
-                        <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">PACOTE PREMIUM</h3>
+                        <h3 class="text-3xl font-comic text-white text-center mb-6 tracking-wider drop-shadow-md">PACOTE PREMIUM VIP</h3>
                         <ul class="space-y-4 mb-8 flex-1 text-white">
                             <li class="flex items-center gap-3">
                                 <i data-lucide="check" class="w-4 h-4 text-green-500"></i> +70 MIL HQs e Mangás digitais
