--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ fbq('track', 'PageView');
             <div class="container mx-auto px-4">
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="w-full md:w-1/2 space-y-8">
-                        <h2 class="text-3xl md:text-5xl font-comic text-white">VEJA O QUE VOCÊ <span class="text-blue-500">VAI RECEBER&nbsp; em nosso acervo digital completo!<br><br></span><h1>SÃO DE +70MIL HQ&apos;s e mangás!</h1></h2>
+                        <h2 class="text-3xl md:text-5xl font-comic text-white">VEJA O QUE VOCÊ <span class="text-blue-500">VAI RECEBER&nbsp; em nosso acervo digital completo!<br><br></span></h2>
                         <div class="space-y-4">
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
