--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@ fbq('track', 'PageView');
                 </div>
                 <!-- Headline -->
                 <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">Atenção, super desconto liberado!!!</h1>
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás</span> RARoS, CLÁSSICoS E MODERNoS por + 4,90</h1>
+                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;Por +4,90 você leva o pacote premium vip com&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás</span> em Português e de alta qualidade!</h1>
                 <!-- Subheadline -->
                 <!-- Video Placeholder -->
                 <!-- CTA -->
