--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ fbq('track', 'PageView');
                     <span id="current-date"></span>
                 </div>
                 <!-- Headline -->
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;RECEBA MAIS&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">de +70 MIL HQ&apos;s e mangás todos</span>&nbsp;em pORTUGUÊS E ALTA QUALIDADE!</h1>
+                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;RECEBA MAIS&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">de +70 MIL HQ&apos;s mangás e gibis </span>todos em pORTUGUÊS E ALTA QUALIDADE!</h1>
                 <!-- Subheadline -->
                 <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">Acesso imediato ao maior catálogo de HQs e Mangás em Português! Qualidade garantida e conteúdo 100% em PT-BR. Não perca essa oportunidade!</p>
                 <!-- Video Placeholder -->
-                <img src="images/mm-mangas-naruto-cke.jpg" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
+                <img src="images/cavaleiro%20dalua.png" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                 <!-- CTA -->
                 <button onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})" class="w-full md:w-auto px-8 py-6 text-2xl md:text-4xl font-comic text-white rounded-xl cta-gradient uppercase tracking-wider shadow-xl mb-4 animate-pulse">
                     QUERO ACESSAR AGORA!
@@ -164,6 +164,60 @@ fbq('track', 'PageView');
                 <div class="carousel-item">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
                         <img class="w-full h-full object-cover" src="images/STHQ.jpg">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-12 bg-black/50 border-y border-white/5">
+            <div class="container mx-auto px-4 mb-8">
+                <h3 class="text-center text-2xl font-comic text-gray-400 uppercase tracking-widest">Algumas das Obras Disponíveis</h3>
+            </div>
+            <div class="carousel-container px-4">
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/81wukFhbLHL._AC_UF1000,1000_QL80_.jpg" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/91RQ7rNyCsL._AC_UF1000,1000_QL80_.jpg" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/9115w4OBZAL._SL1500_5.jpg" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img class="w-full h-full object-cover" src="images/710bNd4JR9L._SL1000_.jpg">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-12 bg-black/50 border-y border-white/5">
+            <div class="container mx-auto px-4 mb-8">
+                <h3 class="text-center text-2xl font-comic text-gray-400 uppercase tracking-widest">Algumas das Obras Disponíveis</h3>
+            </div>
+            <div class="carousel-container px-4">
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/chico%20bento.png" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/ShowImagegibi1.jpg" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img src="images/cascaomonica.png" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
+                        <img class="w-full h-full object-cover" src="images/monica12.png">
                     </div>
                 </div>
             </div>
