--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@ fbq('track', 'PageView');
                 </div>
                 <!-- Headline -->
                 <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">Atenção, super desconto liberado!!!</h1>
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;Por +4,90 você leva o pacote premium vip com&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás</span> em Português e de alta qualidade!</h1>
+                <h1 class="text-4xl md:text-6xl lg:text-7xl font-comic text-white mb-6 leading-tight comic-text-stroke drop-shadow-xl">&nbsp;Por +4,99 você leva o pacote premium vip com&nbsp;<span class="text-green-500 text-5xl md:text-7xl block md:inline">+70MIL HQ&apos;s e mangás e gibis</span>&nbsp;em Português e de alta qualidade!</h1>
                 <!-- Subheadline -->
                 <!-- Video Placeholder -->
                 <!-- CTA -->
@@ -102,7 +102,7 @@ fbq('track', 'PageView');
                         <div class="text-center mt-auto">
                             <p classname="text-gray-400 text-sm line-through mb-1">DE R$ 57,00</p>
                             <p class="text-gray-300 text-sm mb-2">POR APENAS</p>
-                            <div class="text-7xl font-comic text-green-400 mb-6 tracking-tighter comic-text-stroke drop-shadow-[0_0_10px_rgba(74,222,128,0.5)]">R$ 10,00</div>
+                            <div class="text-7xl font-comic text-green-400 mb-6 tracking-tighter comic-text-stroke drop-shadow-[0_0_10px_rgba(74,222,128,0.5)]">R$ 9,99</div>
                             <a target="_blank" class="block w-full py-5 rounded-xl font-bold text-2xl cta-gradient text-white shadow-xl transition-all uppercase tracking-wide font-comic animate-pulse text-center" href="https://e-books-pp.pay.yampi.com.br/r/K0H1IM30W2">
                             QUERO ACESSO TOTAL! </a>
                         </div>
@@ -133,7 +133,7 @@ fbq('track', 'PageView');
                         <div class="text-center mt-auto">
                             <p className="text-gray-400 text-sm line-through mb-1">DE R$ 27,00</p>
                             <p class="text-gray-300 text-sm mb-2">POR APENAS</p>
-                            <div class="text-7xl font-comic text-green-400 mb-6 tracking-tighter comic-text-stroke drop-shadow-[0_0_10px_rgba(74,222,128,0.5)]">R$ 14,90</div>
+                            <div class="text-7xl font-comic text-green-400 mb-6 tracking-tighter comic-text-stroke drop-shadow-[0_0_10px_rgba(74,222,128,0.5)]">R$ 14,99</div>
                             <a target="_blank" class="block w-full py-5 rounded-xl font-bold text-2xl cta-gradient text-white shadow-xl transition-all uppercase tracking-wide font-comic animate-pulse text-center" href="https://e-books-pp.pay.yampi.com.br/r/1JIIBCCKYM">
                             QUERO ACESSO TOTAL! </a>
                         </div>
