--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@ fbq('track', 'PageView');
                 <!-- Subheadline -->
                 <p class="text-lg md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto font-condensed font-light">Acesso imediato ao maior catálogo de HQs e Mangás em Português! Qualidade garantida e conteúdo 100% em PT-BR. Não perca essa oportunidade!</p>
                 <!-- Video Placeholder -->
-                <img src="images/cavaleiro%20dalua.png" alt="Moon Knight" class="relative z-10 w-full max-w-md mx-auto rounded-xl shadow-2xl border-4 border-white/10 rotate-3 hover:rotate-0 transition-transform duration-500">
                 <!-- CTA -->
                 <button onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})" class="w-full md:w-auto px-8 py-6 text-2xl md:text-4xl font-comic text-white rounded-xl cta-gradient uppercase tracking-wider shadow-xl mb-4 animate-pulse">
                     QUERO ACESSAR AGORA!
@@ -94,7 +93,7 @@ fbq('track', 'PageView');
                         <div class="space-y-4">
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
-                                <span class="text-lg font-semibold">+70 MIL HQs e Mangás digitais</span>
+                                <span class="text-lg font-semibold">+70 MIL HQs e Mangás e Gibis digitais</span>
                             </div>
                             <div class="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg border border-white/5">
                                 <i data-lucide="check-circle-2" class="w-6 h-6 text-green-500"></i> 
