--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ fbq('track', 'PageView');
                 <h3 class="text-center text-2xl font-comic text-gray-400 uppercase tracking-widest">Algumas das Obras Disponíveis</h3>
             </div>
             <div class="carousel-container px-4">
-                <div class="carousel-item">
+                <div class="carousel-item" src="images/hulk9.png-">
                     <div class="aspect-[2/3] overflow-hidden rounded-xl border-2 border-white/10">
-                        <img src="images/FOLDE1.png" class="w-full h-full object-cover">
+                        <img src="images/hulk2.jpg" class="w-full h-full object-cover">
                     </div>
                 </div>
                 <div class="carousel-item">
